--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,36 @@
 # Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+This handbook contains a collection of tools, models and frameworks (TMFs) I have personally used to perform engineering design.
+Its purpose is to help aid future design work by reminding me of useful TMFs, how to apply them, when they are useful, and best practices.
+My criteria for selecting TMFs involve diverse use across Framing, Diverging, Converging and Representing (FDCR) strands and how often I believe the TMF should be used.
+By reflecting on my experiences, I will share why certain tools align with my values and help address personal biases. 
+Additionally, insights around best practices will be revealed for each TMF. 
 
-## What is Nextra?
+## How you should read this handbook
+This handbook is meant to be read sequentially based on the order of topics on the left sidebar. 
+If the sidebar is not visible, you should use a device with a larger screen. 
+Topics will build on each other and follow an order typical to use in an engineering design process.
+Relevant aspects of images will be highlighted or have annotations. Non-annotated portions are not relevant to the analysis.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## Structure
+First, an overview of my engineering design process is given. 
+Then, 12 TMFs are divided into the categories of FDCR. 
+Each TMF page will have the following structure:
+1. A few sentences on the tool's purpose and background.
+2. If applicable, the process of steps taken to use the TMF
+3. My use of the tool including a reflection on its fit and utility. If applicable, I will also highlight why I enjoy the tool, referencing the experiences, values and biases that inform my identity. Any key insights and best practices will be **bolded**.
+4. A checklist to follow when using the tool in the future. This makes it easier to apply my learning to future projects, which is the main purpose of this handbook.
 
-## Documentation
+Each TMF may vary in length based on how extensively the tool was used and how much information is necessary for my future self. Reducing the amount of information was important to improve the chances my future self would use this handbook.
+I also value clarity. Being able to explain concepts simply demonstrates to me that I have a deep understanding of a topic.
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+All figure numbers are relative to each individual page because it is too difficult to keep track of figures across different pages.
+
+## Why a website?
+Websites are a great way to share your work with others. These tools may resonate with other individuals or provide future teams with some insight into my mind and identity.
+I value transparency and authenticity, and by making these documents easily shareable, people can get a glimpse into my authentic engineering process (failures included 😉).
+
+I also wanted to improve the ease of navigation for my future self. This design with the left sidebar minimizes the amount of scrolling needed to jump from one tool to the next. 
+The table of contents on the right gives additional structure and navigation to each page. The search bar on the top right provides an alternative method of navigation. 
+
+Finally, I plan to add features such as a questionnaire decision tree to suggest a relevant TMF given a team's state.
